# content

./: .all-contributorsrc  .cico.yaml  .cmakelintrc  .codacy.yml  .codeclimate.yml  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitpod.Dockerfile  .gitpod.launch.json  .gitpod.yml  .mailmap  .mdl.rb  .mdlrc  .packit.yaml  .pep8speaks.yml  .pyenv.sh  .readthedocs.yml  .travis.yml  .yamllint  .yamllint.yml  BUILD.md  CLAUDE.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Contributors.md  Contributors.xml  DISCLAIMER  Dockerfile  Dockerfile_python2  LICENSE  Makefile  README  README-layout  README-layout.md  README.md  RULES.md  (+32 more)
.claude/: CLAUDE.md
.config/: ansible-lint.yml
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.qlty/: qlty.toml
.tekton/: compliance-operator-content-dev-pull-request.yaml  compliance-operator-content-dev-push.yaml  compliance-operator-content-pull-request.yaml  compliance-operator-content-push.yaml
AmazonLinux/: Makefile
Chromium/: CMakeLists.txt  DISCLAIMER  Makefile
Docker/: Makefile
Dockerfiles/: centos6  centos8  compliance-operator-content-konflux.Containerfile  compliance_operator_content.Dockerfile  fedora  fedora_linkchecker  fedora_python2  fedora_python3  id_dsa_test_key  id_dsa_test_key.pub  id_ecdsa_test_key  id_ecdsa_test_key.pub  id_rsa_test_key  id_rsa_test_key.pub  ocp4_content  opensuse_leap_15_2  quay_publish  sle15-sp3v2  sshd_config  test_suite-al2023  test_suite-centos  test_suite-cs8  test_suite-cs9  test_suite-debian12  test_suite-debian13  test_suite-fedora  test_suite-ol7  test_suite-ol8  test_suite-ol9  test_suite-rhel  test_suite-rhel8  test_suite-rhel9  test_suite-sle15  test_suite-ubi  test_suite-ubuntu2204  test_suite-ubuntu2404  test_suite-ubuntu2604  ubuntu
Fedora/: CMakeLists.txt  LICENSE  Makefile  scap-security-guide.spec
Firefox/: CMakeLists.txt  DISCLAIMER  Makefile  guide.xslt
JBossEAP5/: README  build.xml  eap5-cpe-dictionary.xml  eap5-cpe-oval.xml  eap5-ocil.xml  eap5-oval.xml  eap5-xccdf.xml
JBossFuse6/: README  build.xml  ssg-fuse6-cpe-dictionary.xml  ssg-fuse6-cpe-oval.xml  ssg-fuse6-ocil.xml  ssg-fuse6-oval.xml  ssg-fuse6-xccdf.xml
JRE/: CMakeLists.txt  Makefile
Java/: Makefile
OpenSUSE/: CMakeLists.txt  Makefile  guide.xslt
OpenStack/: Makefile
RHEL6/: Makefile
RHEVM3/: CMakeLists.txt  Makefile  guide.xslt
WRLinux/: CMakeLists.txt  Makefile
Webmin/: CMakeLists.txt  Makefile
apple_os/: benchmark.yml
applications/: benchmark.yml
build-scripts/: add_stig_references.py  build-all-guides.py  build-all-remediation-roles.py  build_all_guides.py  build_all_remediation_roles.py  build_cel_content.py  build_profile_remediations.py  build_rule_playbooks.py  build_sce.py  build_shorthand.py  build_templated_content.py  build_tests.py  build_xccdf.py  collect_remediations.py  combine-ovals.py  combine-remediations.py  combine_ovals.py  combine_remediations.py  compile_all.py  compile_product.py  compile_profiles.py  compose_ds.py  cpe-generate.py  cpe_generate.py  enable-derivatives.py  enable_derivatives.py  expand_jinja.py  extract_rule_variable_mapping.py  generate-from-templates.py  generate_bash_remediation_functions.py  generate_bash_scripts.py  generate_fixes_xml.py  generate_from_templates.py  generate_guides.py  generate_man_page.py  generate_manifest.py  generate_profile_remediations.py  oscap-svg-support.py  oscap_svg_support.py  profile-stats.py  (+14 more)
chromium/: CMakeLists.txt  guide.xslt  product.yml
cmake/: CopyFiles.cmake  FindBATS.cmake  FindOPENSCAP.cmake  FindOpenSCAP.cmake  FindPythonModule.cmake  GNUInstallDirs.cmake  SSGCommon.cmake  build_remediations.sh
components/: 389-ds-base.yml  SuSEfirewall2.yml  abrt.yml  acpid.yml  aide.yml  apparmor-utils.yml  apparmor.yml  apport.yml  apt.yml  at.yml  audit.yml  authselect.yml  autofs.yml  avahi.yml  bash.yml  bind.yml  binutils.yml  bluez.yml  certmonger.yml  chrony.yml  cockpit.yml  coreutils.yml  cronie.yml  crontabs.yml  crypto-policies.yml  cryptsetup-luks.yml  cryptsetup.yml  cups.yml  cyrus-imapd.yml  cyrus-sasl.yml  dbus.yml  dconf.yml  dhcp.yml  dnf.yml  dnsmasq.yml  docker.yml  dovecot.yml  dracut.yml  fapolicyd.yml  fedora-release-common.yml  (+126 more)
config/: oval.config
controls/: README_nist_800_53.md  anssi-minimal.yml  anssi.yml  anssi_sle.yml  anssi_sle16.yml  base_sle16.yml  bsi_app_4_4.yml  bsi_sys_1_1.yml  bsi_sys_1_1_rhcos4.yml  bsi_sys_1_1_rhel10.yml  bsi_sys_1_1_rhel9.yml  bsi_sys_1_3_rhcos4.yml  bsi_sys_1_3_rhel.yml  bsi_sys_1_3_rhel10.yml  bsi_sys_1_3_rhel9.yml  bsi_sys_1_6.yml  ccn_ol9.yml  ccn_rhel9.yml  cis_al2023.yml  cis_alinux2.yml  cis_alinux3.yml  cis_almalinux9.yml  cis_debian12.yml  cis_debian13.yml  cis_eks.yml  cis_fedora.yml  cis_ocp.yml  cis_ocp_190.yml  cis_ocp_1_3_0.yml  cis_ocp_1_4_0.yml  cis_ocp_1_7_0.yml  cis_rhel10.yml  cis_rhel7.yml  cis_rhel8.yml  cis_rhel9.yml  cis_sle12.yml  cis_sle15.yml  cis_sle_15.yml  cis_slmicro5.yml  cis_ubuntu2204.yml  (+43 more)
debian10/: CMakeLists.txt  product.yml
debian8/: CMakeLists.txt  guide.xslt  product.yml
debian9/: CMakeLists.txt  product.yml
docs/: .gitignore  CMakeLists.txt  Makefile  README  README.md  README_nist_800_53.md  README_nist_800_53_viewer.md  _config.yml  conf.py  contributor.md  example.profile  index.md  index.rst  installation.md  jinja_macros.rst  man_page_template.jinja  policy_source_format.adoc  release_process.md  requirements.txt  scap-security-guide.8  ssg-docs.cfg  ssg-docs.db
eap6/: CMakeLists.txt  guide.xslt  product.yml
example/: CMakeLists.txt  README.md  new_product.sh  product.yml  sles15_product.sh
fedora/: CMakeLists.txt  guide.xslt  product.yml
firefox/: CMakeLists.txt  guide.xslt  product.yml
fuse6/: CMakeLists.txt  product.yml
jboss_eap6/: CMakeLists.txt  guide.xslt
jboss_fuse6/: CMakeLists.txt  guide.xslt
jre/: CMakeLists.txt  guide.xslt  product.yml
macos1015/: CMakeLists.txt  product.yml
ocp-resources/: compliance-operator-alpha-subscription.yaml  compliance-operator-catalog-source.yaml  compliance-operator-csc.yaml  (+11 more)
(+32461 files in other folders)
